# RESUME_SKILL

./: .env.example  .gitignore  ARCHITECTURE.md  BUGFIX_REPORT.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY_CN.md  DEVELOPMENT_PROGRESS.md  LICENSE  MCP_REFACTOR_REPORT.md  MCP_STATUS_REPORT.md  OPENSOURCE_PREPARATION.md  PROJECT_COMPLETION.md  PROJECT_STATUS_V2_3.md  QUICKSTART.md  README.md  SELF_CONTAINED_VERIFICATION.md  SESSION_COMPLETION_SUMMARY.md  V2_4_DEVELOPMENT_PROGRESS.md  V2_4_FINAL_REPORT.md  check_opensource_readiness.py  config.yaml  final_completion_report.py  final_verification.py  init_git.py  job_preferences.yaml  main.py  opencode.example.json  pyproject.toml  requirements.txt  update_readme.py  verify_implementation.py  verify_imports.py
apply_agent/: README.md  __init__.py  browser_agent.py  config.py  form_extractor.py  form_filler.py  form_mapper.py  jd_analyzer.py  llm_client.py  profile_summary.py  recorder.py  smart_field_matcher.py  storage.py  utils.py  workflow.py
docs/: WORKFLOW_QUICKSTART.md
examples/: sample_profile.yaml  sample_profile_template.md
personal_info/: extractor.py  profile_template.md
scripts/: install_v24.ps1  install_v24.sh  switch_env.ps1  switch_env.sh  verify_environment.py
tests/: __init__.py  conftest.py  find_scout_step.py  find_steps.py  list_chrome_tools.py  list_tools.py  test_agent_parse.py  test_browser_executor.py  test_chrome_client.py  test_chrome_client_v2.py  test_chrome_full.py  test_chrome_simple.py  test_config.py  test_extract_api.py  test_field_matcher.py  test_fill_background_task.py  (+20 more)
(+49 files in other folders)
